src/test/deca/context/valid/ContextAvecObjet/DeclMeth/methodNamedClass.deca
// Description:
//   Méthode de même nom que la classe
//
// Resultats:
//    ok
class A{

    int x;

    void A(int y){
        x = y;
    }
}

