src/test/deca/context/invalid/provided/ContextSansObjet/OperationsBooleennes/Or_String.deca
//Description :
//	Vérification contextuelle de la sortie de l'opérateur || (différente de string)
//
//Résultats :
//	Erreur Contextuelle
//  Ligne 10 : type incompatible

{
    boolean x = true;
    string y = x || false;
}